# arxiv2product

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  agentica-docs.md  test_agent.py  test_agentica.py  test_stream.py
.letta/: settings.json  settings.local.json
apps/web/: .env.example  README.md  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/api/dashboard/: route.ts
apps/web/app/api/feedback/: route.ts
apps/web/app/api/reports/: route.ts
apps/web/app/api/reports/[jobId]/: route.ts
apps/web/app/dashboard/: loading.tsx  page.tsx
apps/web/app/generate/: page.tsx
apps/web/app/reports/[jobId]/: loading.tsx  page.tsx
apps/web/components/: feedback-form.tsx  generate-report-form.tsx  report-markdown.tsx  site-shell.tsx
apps/web/lib/: api.ts  mock-data.ts  session.ts  types.ts
apps/web/supabase/: schema.sql
cli/: .env.example  README.md  main.py  pyproject.toml
cli/arxiv2product/: __init__.py  backend.py  cli.py  compete.py  compete_prompts.py  compete_tools.py  errors.py  feedback.py  ingestion.py  models.py  paper_search.py  pipeline.py  prompts.py  reporting.py  research.py  service.py  service_store.py
cli/tests/: test_backend.py  test_compete.py  test_paper_search.py  test_pipeline.py  test_reporting.py  test_research.py  test_service_store.py  test_spawn_agent.py
